css/style.css
/* ... */
.ss-form-question.left, .ss-form-question.right{
    vertical-align: top;
    display: inline-block;
    width: 47%;
    padding: 5%;
}
.contact header{
    background-color: rgba(0,0,0,0.2);
}
body.works ul.audioList li{
    margin-bottom: 18px;
}
/* BLOG DESIGN */
/*=============*/
body.blog{
    background-color: #444;
}
.blog p.soon{
    color: #bbb;
    font-size: 100px;
    display: block;
    text-align: center;
    margin: 190px 0;
}
/* FOOTER DESIGN */
/*===============*/

footer{
	background-color: #111;
    border-top: solid 8px #333;
	color: #ccc;
	width: 100%;
}
footer .left, footer .middle, footer .right{
    display: inline-block;
    padding: 15px;
    vertical-align: top;
    width: 313px;
}

footer .left{
	font-family: 'Raleway', sans-serif;
    font-weight: 300;
}
footer .left ul li{
	margin: 15px auto;
}
footer .left ul li a{
	color: #ccc;
	font-size: 30px;
	text-decoration: none;
	-webkit-transition: all ease-in-out 0.2s;
    -moz-transition: all ease-in-out 0.2s;
    -ms-transition: all ease-in-out 0.2s;
    -o-transition: all ease-in-out 0.2s;
    transition: all ease-in-out 0.2s;
}
footer .left ul li a:hover{
	color: #fff;
    text-shadow: 1px 1px 0 #000;
	-webkit-transition: all ease-in-out 0.3s;
    -moz-transition: all ease-in-out 0.3s;
    -ms-transition: all ease-in-out 0.3s;
    -o-transition: all ease-in-out 0.3s;
    transition: all ease-in-out 0.3s;
}
footer .left ul li i{
	margin-right: 12px;
	-webkit-transition: all ease-in-out 0.2s;
    -moz-transition: all ease-in-out 0.2s;
    -ms-transition: all ease-in-out 0.2s;
    -o-transition: all ease-in-out 0.2s;
    transition: all ease-in-out 0.2s;
}
footer .left ul li a:hover i{
	color: #2da5bb;
    text-shadow: 2px 2px 0 #000;
	-webkit-transition: all ease-in-out 0.3s;
    -moz-transition: all ease-in-out 0.3s;
    -ms-transition: all ease-in-out 0.3s;
    -o-transition: all ease-in-out 0.3s;
    transition: all ease-in-out 0.3s;
}
footer h4{
    font-family: 'Oswald', sans-serif;
    font-size: 65px;
    font-weight: 400;
    letter-spacing: 3px;
    text-transform: uppercase;
}
footer p{
    font-family: Tahoma, sans-serif;
    font-size: 17px;
}
footer .right{
    padding: 0;
}
footer .right ul{
    padding: 15px 15px 15px 135px;
}
footer .right li{
    font-size: 30px;
    line-height: 50px;
}
footer .right li i{
    margin-right: 12px;
}
footer .right a{
    color: inherit;
    font-family: 'Oswald', sans-serif;
    font-weight: 300;
    letter-spacing: 1px;
    text-transform: uppercase;
    text-decoration: none;
}
footer .right a:hover{
    color: #fff;
}
footer .right a:hover .icon-google-plus-sign, 
footer .right a:hover .icon-facebook-sign, 
footer .right a:hover .icon-twitter, 
footer .right a:hover .icon-linkedin-sign,
footer .right a:hover .icon-youtube,
footer .right a:hover{
    text-shadow: 0 2px 0 #000;
}
footer .right a:hover .icon-google-plus-sign, 
footer .right a:hover .icon-facebook-sign, 
footer .right a:hover .icon-twitter, 
footer .right a:hover .icon-linkedin-sign,
footer .right a:hover .icon-youtube,
footer .right a:hover{
    -webkit-transition: all ease-in-out 0.3s;
    -moz-transition: all ease-in-out 0.3s;
    -ms-transition: all ease-in-out 0.3s;
    -o-transition: all ease-in-out 0.3s;
    transition: all ease-in-out 0.3s;
}
footer .right a .icon-google-plus-sign, 
footer .right a .icon-facebook-sign, 
footer .right a .icon-twitter, 
footer .right a .icon-linkedin-sign,
footer .right a .icon-youtube,
footer .right a{
    -webkit-transition: all ease-in-out 0.1s;
    -moz-transition: all ease-in-out 0.1s;
    -ms-transition: all ease-in-out 0.1s;
    -o-transition: all ease-in-out 0.1s;
    transition: all ease-in-out 0.1s;
}
footer .right a:hover .icon-google-plus-sign{
    color: #dd4b39;
}
footer .right a:hover .icon-facebook-sign{
    color: #3b5998;
}
footer .right a:hover .icon-twitter{
    color: #00a0d1;
}
footer .right a:hover .icon-linkedin-sign{
    color: #007bb6
}
footer .right a:hover .icon-youtube{
    color: #bb0000;
}
footer .subFooter{
	background-color: #080808;
	font-family: 'Oswald', sans-serif;
	font-size: 36px;
	font-weight: 300;
	width: 100%;
}
footer .subFooter .wrapper a{
    color: #ccc;
    float: right;
    text-decoration: none;
}
footer .subFooter .wrapper a span{
    margin-left: 8px;
}

